Update to Template and Theme Name

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-	Theme Name: Kake - Corporate Full Theme - Child
+	Theme Name: Corporate Full Theme - Child
 	Theme URI: http://corpfull.kakesamples.com
 	Description: Theme for corporate sites (this is the child theme)!
 	Version: 4.0.0
@@ -7,7 +7,7 @@
 	Author URI: http://web.lljb3.com
 	License: GNU General Public License v2 or later
 	License URI: http://www.gnu.org/licenses/gpl-2.0.html
-	Template: Corp-Full-Theme
+	Template: Corp-Full-Theme-4
 	Text Domain: corp-full-theme-child
 	Tags: prodhmd, kakemultimedia, corporate, starkers, clean, basic
 */
