Change in theme name

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-	Theme Name: Kake - Corporate Full Theme - Child
+	Theme Name: Corporate Full Theme - Child
 	Theme URI: http://corpfull.kakesamples.com
 	Description: Theme for corporate sites (this is the child theme)!
 	Version: 4.0.0
