--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 	Theme Name: Corporate Full Theme - Child
 	Theme URI: http://corpfull.kakesamples.com
-	Description: Theme for corporate sites (this is the child theme)!
+	Description: Kake Multimedia and ProdHMD's WordPress theme for corporations and small businesses (this is the child theme).
 	Version: 4.0.0
 	Author: James Burrell
 	Author URI: http://web.lljb3.com
